--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,7 +10,10 @@
         "format": "prettier --write .",
         "deploy:contract": "tsx scripts/deploy.ts",
         "verify:contract": "tsx scripts/verify.ts",
-        "build:contract": "cd ../../contracts/rent-escrow && soroban contract build"
+        "build:contract": "cd ../../contracts/rent-escrow && soroban contract build",
+        "test": "jest",
+        "test:watch": "jest --watch",
+        "test:coverage": "jest --coverage"
     },
     "dependencies": {
         "@hookform/resolvers": "^5.2.2",
@@ -39,6 +42,10 @@
         "zod": "^4.3.6"
     },
     "devDependencies": {
+        "@testing-library/jest-dom": "^6.9.1",
+        "@testing-library/react": "^16.3.2",
+        "@testing-library/user-event": "^14.6.1",
+        "@types/jest": "^30.0.0",
         "@types/jsonwebtoken": "^9.0.10",
         "@types/node": "^20",
         "@types/react": "^18",
@@ -48,10 +55,13 @@
         "eslint": "^8",
         "eslint-config-next": "14.0.3",
         "eslint-config-prettier": "^10.1.8",
+        "jest": "^30.2.0",
+        "jest-environment-jsdom": "^30.2.0",
         "postcss": "^8",
         "prettier": "^3.8.1",
         "prettier-plugin-tailwindcss": "^0.5.14",
         "tailwindcss": "^3.3.0",
+        "ts-jest": "^29.4.6",
         "tsx": "^4.21.0",
         "typescript": "^5"
     }
