--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -66,7 +66,6 @@
         "@faker-js/faker": "^10.3.0",
         "@lhci/cli": "^0.15.1",
         "@next/bundle-analyzer": "^14.0.3",
-        "@next/swc-linux-x64-gnu": "14.0.3",
         "@testing-library/jest-dom": "^6.9.1",
         "@testing-library/react": "^16.3.2",
         "@testing-library/user-event": "^14.6.1",
@@ -96,5 +95,8 @@
         "tsx": "^4.21.0",
         "typescript": "^5",
         "vitest": "^4.0.18"
+    },
+    "optionalDependencies": {
+        "@next/swc-linux-x64-gnu": "14.0.3"
     }
 }
